syntax = "proto3";

package signaref;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "common.proto";

message UserDetails{
    string email=1;
    string mobile =2;
    string passcode=3;
    string user_type=4;
    string status=5; //tobeapproved /approved /active /inactive /blocked
    google.protobuf.Timestamp last_updated = 6;
}

message LoginDetails{
  string email=1;
  string mobile =2;
  string passcode=3;
  string user_type=4;
}

message UserChangePassword{
  string email=1;
  string mobile =2;
  string currentPasscode=3;
  string newPasscode=4;
}

service User{
    rpc RegisterUser (UserDetails) returns(GeneralResponse){
                option (google.api.http) = {
                  post: "/v1/user/register"
                  body: "*"
               };
             }
    rpc LoginUser(LoginDetails)returns(GeneralResponse){
      option (google.api.http) = {
        post: "/v1/user/login"
        body: "*"
     };
    }
   /* rpc ForgotPassword(LoginDetails)returns(GeneralResponse){
      option (google.api.http) = {
        post: "/v1/user/forgotpassword"
        body: "*"
     };
    }
    rpc ChangePassword(UserChangePassword)returns(GeneralResponse){
      option (google.api.http) = {
        post: "/v1/user/change/password"
        body: "*"
     };
    }
    rpc ChangeEmail(LoginDetails)returns(GeneralResponse){
      option (google.api.http) = {
        post: "/v1/user/change/email"
        body: "*"
     };
    }
    rpc ChangeMobile(LoginDetails)returns(GeneralResponse){
      option (google.api.http) = {
        post: "/v1/user/change/mobile"
        body: "*"
     };
    }*/
}

